Fix overflowing issues

--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,6 @@ html {
 }
 
 body {
-    width: 100vw;
     max-width: 100%;
     min-height: 95vh;
     display: flex;
